--- a/coc-settings.json
+++ b/coc-settings.json
@@ -112,19 +112,21 @@
 	"explorer.keyMappingMode": "none",
 	"explorer.buffer.showHiddenBuffers": false,
 	"explorer.keyMappings.global": {
-		"u": "nodePrev",
-		"e": "nodeNext",
-		"h": "toggleSelection",
+		"k": "nodePrev",
+		"j": "nodeNext",
+		"t": "toggleSelection",
 		"<tab>": "actionMenu",
 		"gl": "expandRecursive",
 		"gh": "collapseRecursive",
 		"i": ["wait", "expandable?", "expand", "open"],
 		"<cr>": ["wait", "expandable?", "cd", "open"],
-		"I": "open:vsplit",
-		"o": ["wait", "expanded?", "collapse", "expand"],
+		"o": "open:vsplit",
+		"I": ["wait", "expanded?", "collapse", "expand"],
 		"O": "open:tab",
-		"n": "collapse",
-		"l": "gotoParent",
+		"l": "expand",
+		"L": "expand:recursive",
+		"h": "collapse",
+		"p": "gotoParent",
 		"yp": "copyFilepath",
 		"yn": "copyFilename",
 		"yy": "copyFile",
@@ -132,9 +134,8 @@
 		"pp": "pasteFile",
 		"dD": "deleteForever",
 		"a": "addFile",
-		"k": "addFile",
-		"M": "addDirectory",
-		"cw": "rename",
+		"ad": "addDirectory",
+		"rn": "rename",
 		".": "toggleHidden",
 		"zh": "toggleHidden",
 		"R": "refresh",
