--- a/coc-settings.json
+++ b/coc-settings.json
@@ -114,7 +114,7 @@
 	"explorer.keyMappings.global": {
 		"k": "nodePrev",
 		"j": "nodeNext",
-		"t": "toggleSelection",
+		"ts": "toggleSelection",
 		"<tab>": "actionMenu",
 		"gl": "expandRecursive",
 		"gh": "collapseRecursive",
@@ -123,14 +123,18 @@
 		"o": "open:vsplit",
 		"I": ["wait", "expanded?", "collapse", "expand"],
 		"O": "open:tab",
+		"pv": "preview:content",
+		"pt": "preview:labeling",
+		"to": "textobj:line",
 		"l": "expand",
 		"L": "expand:recursive",
 		"h": "collapse",
-		"p": "gotoParent",
+		"gp": "gotoParent",
 		"yp": "copyFilepath",
 		"yn": "copyFilename",
 		"yy": "copyFile",
-		"dd": "cutFile",
+		"cc": "cutFile",
+		"dd": "delete",
 		"pp": "pasteFile",
 		"dD": "deleteForever",
 		"a": "addFile",
